Добавил игру к сайту

--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
             <div class="nav-item" data-page="/shop">Магазин</div>
             <div class="nav-item" data-page="/community">Сообщество</div>
             <div class="nav-item" data-page="/stream">Стримы</div>
+            <div class="nav-item" data-page="/pong">Pong 2D</div>
             <div class="nav-item" data-page="/profile">Профиль</div>
             <div class="nav-item" data-page="/admin">Админ</div>
         </nav>
