--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus Platform - Profile</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -57,6 +58,38 @@
                         </label>
                         <button type="submit" class="btn btn-primary">Сохранить профиль</button>
                     </form>
+                </section>
+
+                <section class="panel-card">
+                    <div class="panel-subtitle">Поиск друзей</div>
+                    <div class="stack-form">
+                        <label>
+                            Ник пользователя
+                            <input id="friendSearchInput" type="text" class="admin-input" placeholder="Введите имя пользователя">
+                        </label>
+                        <button id="friendSearchBtn" type="button" class="btn btn-secondary">Найти</button>
+                        <div id="friendSearchResults" style="display:flex; flex-direction:column; gap:8px;"></div>
+                    </div>
+                </section>
+
+                <section class="panel-card">
+                    <div class="panel-subtitle">Входящие заявки в друзья</div>
+                    <div id="incomingRequests" style="display:flex; flex-direction:column; gap:8px;"></div>
+                </section>
+
+                <section class="panel-card">
+                    <div class="panel-subtitle">Личные сообщения</div>
+                    <div class="stack-form">
+                        <div style="font-size:12px; color:var(--text-muted);">Выберите друга:</div>
+                        <div id="profileFriendsList" style="display:flex; flex-direction:column; gap:8px;"></div>
+
+                        <div id="privatePeerLabel" style="font-size:12px; color:var(--text-link);">Собеседник не выбран</div>
+                        <div id="privateMessages" style="height:200px; overflow-y:auto; background:rgba(0,0,0,0.2); border:1px solid rgba(255,255,255,0.08); border-radius:8px; padding:10px; display:flex; flex-direction:column; gap:8px;"></div>
+                        <div style="display:flex; gap:8px;">
+                            <input id="privateMessageInput" type="text" class="admin-input" placeholder="Сообщение...">
+                            <button id="privateMessageSend" type="button" class="btn btn-primary" style="padding:10px 14px;">Отпр.</button>
+                        </div>
+                    </div>
                 </section>
             </div>
         </main>
