--- a/stream.html
+++ b/stream.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus Platform - Streams</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -55,7 +56,24 @@
                 </div>
 
                 <div style="width: 300px; background: var(--bg-card); border-radius: 12px; display: flex; flex-direction: column; border: 1px solid rgba(255,255,255,0.05);">
-                    <div style="padding: 15px; border-bottom: 1px solid rgba(255,255,255,0.05); font-weight: bold; color: var(--text-bright);">Чат трансляции</div>
+                    <div style="padding: 15px; border-bottom: 1px solid rgba(255,255,255,0.05); font-weight: bold; color: var(--text-bright);">Сеть и чат</div>
+
+                    <div style="padding: 10px 15px; border-bottom: 1px solid rgba(255,255,255,0.05); display:flex; gap:8px; align-items:center;">
+                        <span style="font-size:12px; color: var(--text-muted);">Комната:</span>
+                        <select id="streamRoomSelect" class="admin-input" style="padding:6px 8px; font-size:12px;">
+                            <option value="global">Global</option>
+                            <option value="gaming">Gaming</option>
+                            <option value="trade">Trade</option>
+                            <option value="lfg">LFG</option>
+                        </select>
+                    </div>
+
+                    <div style="padding: 12px 15px; border-bottom: 1px solid rgba(255,255,255,0.05);">
+                        <div style="font-size: 12px; color: var(--text-muted); text-transform: uppercase; margin-bottom: 10px; display:flex; justify-content:space-between;">
+                            Друзья <span id="friendsOnlineCount">0 онлайн</span>
+                        </div>
+                        <div id="friendsListDynamic"></div>
+                    </div>
 
                     <div id="streamChatMessages" style="flex: 1; overflow-y: auto; padding: 15px; font-size: 13px; display: flex; flex-direction: column; gap: 8px;">
                         <div><span style="color: #a78bfa; font-weight: bold;">User123:</span> Кто побеждает?</div>
