--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus Platform - Shop</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/script.js" defer></script>
 </head>
 <body>
